--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
     "@react-router/fs-routes": "^7.13.0",
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.95.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "isbot": "^5.1.31",
     "lucide-react": "^0.563.0",
+    "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "^19.2.4",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.1",
     "react-router": "7.12.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
     "zod": "^4.3.6"
