--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-router/fs-routes": "^7.13.0",
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
+    "@reduxjs/toolkit": "^2.11.2",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.3",
     "class-variance-authority": "^0.7.1",
@@ -27,6 +28,7 @@
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.1",
+    "react-redux": "^9.2.0",
     "react-router": "7.12.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
