--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
     "embla-carousel-react": "^8.6.0",
     "isbot": "^5.1.31",
     "lucide-react": "^0.563.0",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@react-router/dev": "7.12.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^22.19.9",
     "@types/react": "^19.2.7",
