--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-direction": "^1.1.1",
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-router/fs-routes": "^7.13.0",
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
